[package]
name = "pcf-wasm"
version = "0.1.0"
authors = ["MinusKelvin <mark.carlson@minuskelvin.net>", "mgt <mgt@oi-wiki.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
arrayvec = "0.5"
rayon = "1.3"
fumen = "0.1"
wasm-bindgen = "0.2.74"

[dev-dependencies]
criterion = "0.3"
rand = "0.7"

[build-dependencies]
arrayvec = "0.5"

[[bench]]
name = "combination"
harness = false

[[bench]]
name = "permutation"
harness = false

[[bench]]
name = "specific_pc"
harness = false

[[bench]]
name = "threaded_combos"
harness = false

[profile.release]
debug = true
