[package]
name = "pcf-wasm"
version = "0.1.5"
authors = ["MinusKelvin <mark.carlson@minuskelvin.net>", "mgt <mgt@oi-wiki.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
arrayvec = "0.5"
rayon = "1.10"
fumen = "0.1"
wasm-bindgen = "0.2.93"

[dev-dependencies]
criterion = "0.3"
rand = "0.7"

[build-dependencies]
arrayvec = "0.5"

[[bench]]
name = "combination"
harness = false

[[bench]]
name = "permutation"
harness = false

[[bench]]
name = "specific_pc"
harness = false

[[bench]]
name = "threaded_combos"
harness = false

[profile.release]
debug = true
lto = true
opt-level = 'z'
codegen-units = 1
